# sensors_name

./: CMakeLists.txt
src/: BasicSensor.cpp  BasicSensor.hpp  Msg.cpp  Msg.hpp  SensorsMain.cpp  Server.cpp  Server.hpp  ServerMain.cpp  Temperature.cpp  Temperature.hpp  Ultrasonic.cpp  Ultrasonic.hpp
